# pfe-ai-marketing-agent

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Makefile  compose.dev.yml  compose.prod.yml  compose.yml
.claude/: settings.local.json
backend/: beauty-batch-results.json  fashion-batch-results.json  hotels-batch-results.json  (+2 more)
backend/scraper/: pyproject.toml  scraper_service.py
backend/scraper/adapters/: __init__.py  node_contract.py
backend/scraper/core/: __init__.py  cleaner.py  dedupe.py  normalizer.py  orchestrator.py  types.py
backend/scraper/mappers/: __init__.py  competitor_mapper.py  insight_mapper.py  social_analysis_mapper.py
backend/scraper/methods/: __init__.py  api_method.py  base.py  brute_method.py  http_method.py
ml-service/: .env.example  .gitignore  PFE_RECAP_COMPLET.md  conftest.py  pyproject.toml
ml-service/scripts/: _check_facts_bounds.py  _phase4_sanity.py  _template_modules.py  _verify_arabic_stopwords.py  _verify_prose.py  add_features_v2.py  audit_brand_concentration.py  build_masked_corpus.py  build_master_corpus.py  campaign_generator.py  clean_master_corpus.py  compare_models.py  compare_regressors.py  compare_v1_vs_v2.py  compute_facts.py  inspect_multimodal_plan.py  inspect_topics.py  inspect_topics_v2.py  inspect_url_columns.py  phase3_features.py  phase4_ensemble.py  phase4_lgb.py  phase4_lgb_visualize.py  phase4_rf.py  phase4_rf_visualize.py  phase4_v3_filter.py  phase4_v4_compare.py  phase4_xgb.py  phase4_xgb_visualize.py  probe_image_url_expiry.py  prophet_preprocess.py  prophet_train.py  prophet_tune.py  rebuild_brand_features.py  rephrase_facts.py  step4_check_documents.py  step4_generate_insights.py  step4_index_chroma.py  step4_inspect_topics.py  step4_llm_name_topics.py  (+50 more)
ml-service/src/corpus/: cleaner.py  config.py  loader.py  mongo.py  stats.py  topic_model.py
ml-service/tests/: test_engagement_formatter.py  test_facts_grounded_in_parquet.py  test_rephrase_repair.py  test_verify_prose.py
(+205 files in other folders)
