[project]
name = "pfe-ml-service"
version = "0.1.0"
description = "PFE Step 4 — AI Reverse Engineering microservice (master corpus, BERTopic, features, RAG)"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pymongo==4.10.1",
    "pandas==2.2.3",
    "pyarrow==18.1.0",
    "python-dotenv==1.0.1",
    "bertopic>=0.16.0",
    "sentence-transformers>=3.0.0",
    "umap-learn>=0.5.5",
    "hdbscan>=0.8.33",
    "gensim>=4.3.0",
    "scikit-learn>=1.3.0",
    "plotly>=5.18.0",
    "shap>=0.49.1",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
    "xgboost<3.0",
    "transformers>=5.7.0",
    "emoji>=2.15.0",
    "sentencepiece>=0.2.1",
    "protobuf>=7.34.1",
    "lightgbm>=4.6.0",
    "optuna>=4.8.0",
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "chromadb>=1.5.8",
    "ollama>=0.6.2",
    "onnxruntime<1.21",
    "langchain-chroma>=1.1.0",
    "langchain-huggingface>=1.2.2",
    "apify-client>=2.5.0",
    "opencv-python-headless>=4.13.0.92",
    "prophet>=1.3.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
