[project]
name = "pfe-scraper"
version = "0.1.0"
description = "FastAPI microservice for social-media scraping (Crawl4AI + BeautifulSoup)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.2",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
# Heavy browser automation — opt in when you actually need real scraping
browser = [
    "playwright>=1.48.0",
    "crawl4ai>=0.4.0",
]
dev = [
    "ruff>=0.7.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
